# tests

./: .gitignore  olsFit_test.cpp
1337/: k_closest.cpp  shortest_path.cpp  sub_series.cpp
claude_test/: CLAUDE.md
cuda/dt_test/: dt_test.cpp  dt_test.py  razi.cpp  thrust_stuff.cu  thrust_stuff.cuh
cuda/ipc_str/: cuda_ipc_str.cpp  razi_version.py
cuda_ipc_strings/: cuda_ipc_str.py  razi_version.py
cuda_linreg/: olsFit_test.cpp  olsFit_test.py
cuml_logreg/: logreg.cpp
ibis/: combine_csv.py  corr.py
ibis-sqream-backend-project/ibis_sqreamdb/: backend.py  compiler.py  datatypes.py  dialect.py
ibis/.ipynb_checkpoints/: client-checkpoint.py
iceberg/: pyiceberg_example.py  pyspark_ex.py  spark-shell_config.md  sq22912.py  sq22912_r.py
iceberg/cpp/: arrow_filter.cpp  iceberg_manifest_reader.cpp  iceberg_no_download_md.cpp  parse_iceberg_md.cpp  (+1 more)
inproc_py/: hex_to_i.py  mt_sort.cpp  sort.cpp  sort.py  test_cp_cpp.py  test_hex_int.py
iron_dome_game/: Makefile  README.md  score_calculator.cpp
libtorch_gd/: grad_desc.cpp  sqa_test.py
normalize/: normalize.py  razi.py  razi_scale.py
proto_tests/: proto_test.cpp  proto_test.h  proto_test.proto  proto_test.py
pybind_test/: py_module.cpp
sj_test_ibis/: all_test.py  array_v2_test.py  client.py  etai_bigdemo.py  etai_test.py  gemini_test.py  inproc_pymods_test.py  mssql_test.py  oracle_test.py  postgres_test.py  schema_test.py  single_test.py  spark_test.py  sqlite_test.py  test1.py  test2.py  union_test.py
utils/: README.md  __init__.py  avro_to_json.py  pyproject.toml  pyspark.py
xgb/: xgb.py
(+33 files in other folders)
